[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ios-tool"
version = "1.1.0"
description = "iOS Development CLI & GUI Tool - app2ipa, folder2deb, build-dylib, compile with animated universe UI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["ios", "ipa", "deb", "dylib", "theos", "jailbreak", "pyqt6", "gui", "compile", "pyinstaller"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

dependencies = [
    "PyQt6>=6.4.0",
    "typer[all]>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
compile = [
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/example/ios-tool"
Repository = "https://github.com/example/ios-tool"
Documentation = "https://github.com/example/ios-tool#readme"

[project.scripts]
ios-tool = "ios_tool:app"

[tool.setuptools]
py-modules = ["ios_tool"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
